fix: changed vertical align to top

--- a/src/proq/templates/export_style.css
+++ b/src/proq/templates/export_style.css
@@ -21,6 +21,7 @@ th,
 td {
   padding: 5px;
   border: 1px solid #ccc;
+  vertical-align: top;
 }
 
 pre {
@@ -68,6 +69,7 @@ pre {
   td {
     border: thin solid #000;
     padding: 0.5em 0.5em 0.25em 0.5em;
+    vertical-align: top;
   }
 
   code {
